--- a/index.html
+++ b/index.html
@@ -3,63 +3,52 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GlobalHoy - Noticias</title>
-  <link rel="stylesheet" href="/css/reset.css" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/widgets.css" />
+  <title>Global Hoy</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/widgets.css" />
 </head>
 <body>
-  <!-- Banner de aviso de datos simulados -->
-  <div id="api-simulada-banner" class="api-banner">
-    ⚠️ Mostrando datos simulados mientras se conecta a la API real.
-  </div>
   <header class="gh-header">
     <div class="logo">GlobalHoy</div>
-    <div class="search-widget">
-      <input type="text" placeholder="Buscar noticias..." class="search-input">
+    <div class="search-container">
+      <input type="text" placeholder="Buscar noticias..." class="search-input" />
       <button class="search-button">🔍</button>
     </div>
-    <div class="user-actions">
-      <button id="settings-button">⚙️</button>
-      <div class="user-dropdown-menu" id="userDropdown">
-        <a href="#" onclick="cambiarPais()">Noticias por país</a>
-        <a href="#" onclick="cambiarIdioma()">Cambiar idioma</a>
-        <a href="#" onclick="verFavoritos()">⭐ Favoritos</a>
-        <a href="#" onclick="verHistorial()">Historial</a>
-        <a href="#" onclick="verNotificaciones()">Notificaciones</a>
-        <a href="#" onclick="cerrarSesion()">Cerrar sesión</a>
+    <div class="user-menu-container">
+      <button class="user-menu-button">👤 Usuario</button>
+      <div class="user-dropdown-menu">
+        <a href="#" id="menu-noticias-pais">Noticias por país</a>
+        <a href="#" id="menu-cambiar-idioma">Cambiar idioma</a>
+        <a href="#" id="menu-favoritos">⭐ Favoritos</a>
+        <a href="#" id="menu-historial">Historial</a>
+        <a href="#" id="menu-notificaciones">Notificaciones</a>
+        <a href="#" id="menu-cerrar-sesion">Cerrar sesión</a>
       </div>
     </div>
   </header>
 
-  <nav class="gh-nav">
-    <button id="toggleMenu">☰ Usuario</button>
-    <ul class="nav-list">
-      <li>Última Hora</li>
-      <li>Internacional</li>
-      <li>Tecnología</li>
-      <li>Salud</li>
-      <!-- Más categorías -->
-    </ul>
-  </nav>
-
   <main class="gh-widgets">
-    <section class="widget widget-clima" id="widgetClima">
+    <!-- Widgets se cargarán aquí -->
+    <section class="widget widget-clima">
+      <h3>Clima</h3>
+      <p>Cargando clima...</p>
     </section>
-
-    <section class="widget widget-principal" id="widgetPrincipal">
+    <section class="widget widget-principal">
+      <h3>Noticia Principal</h3>
+      <p>Cargando noticia...</p>
     </section>
-
-    <section class="widget widget-grid" id="widgetNoticias">
+    <section class="widget widget-grid">
+      <h3>Noticias Recientes</h3>
+      <p>Cargando noticias...</p>
     </section>
-
     <section class="widget widget-juegos">
-      <h3> Juegos recomendados</h3>
-      <div class="juegos-grid">
-      </div>
+      <h3>Juegos</h3>
+      <p>Cargando juegos...</p>
     </section>
-
-    <section class="widget widget-anuncio" id="widgetAds">
+    <section class="widget widget-anuncio">
+      <h3>Anuncio</h3>
+      <p>Cargando anuncio...</p>
     </section>
   </main>
 
@@ -67,6 +56,6 @@
     <p>&copy; 2025 GlobalHoy. Todos los derechos reservados.</p>
   </footer>
 
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
